<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">
		AngryPipes
	</string>
	<string name="intro">
		The pipes are angry.\n\n
		Someone bad has scrambled them,\n
		and now they\'re all disconnected.\n\n
		Connect them again to make them happy!\n\n\n
	</string>
	<string name="new_game">
		Start new game
	</string>
	<string name="resume_game">
		Resume current game
	</string>
	<string name="settings">
		Game settings
	</string>
	<string name="about">
		About
	</string>

	<string name="undo">
		undo
	</string>

	<string name="size_minimal">
		minimal
	</string>
	<string name="size_small">
		small
	</string>
	<string name="size_medium">
		medium
	</string>
	<string name="size_big">
		big
	</string>
	<string name="size_max">
		insane
	</string>
	<string name="torus_mode">
		torus mode (no border)
	</string>
	<string name="no_cross_mode">
		no cross pieces (harder)
	</string>
	<string name="challenge_mode">
		challenge mode (1 move per pipe)
	</string>
	<string name="auto_lock">
		auto-lock
	</string>

	<string name="auto_pan">
		auto-pan
	</string>

	<string name="haptic_feedback">
		haptic feedback
	</string>

	<string name="light_theme">
		light theme
	</string>

	<string name="save_checkpoint">
		save checkpoint
	</string>
	<string name="restore_checkpoint">
		restore checkpoint
	</string>
	<string name="open_preferences">
		preferences
	</string>

</resources>
