<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/size_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/minimal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/size_minimal" />

            <RadioButton
                android:id="@+id/small_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_small" />
        
            <RadioButton
                android:id="@+id/medium_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/size_medium" />

            <RadioButton
                android:id="@+id/big_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_big" />
            
            <RadioButton
                android:id="@+id/max_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_max" />
            </RadioGroup>

        <CheckBox
            android:id="@+id/torus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/torus_mode" />

        <CheckBox
            android:id="@+id/no_cross_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_cross_mode" />

        <CheckBox
            android:id="@+id/auto_lock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_lock" />

        <CheckBox
            android:id="@+id/challenge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_mode" />

        <Button
            android:id="@+id/new_game_settings_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game" />

    </LinearLayout>

</ScrollView>