<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/light_theme_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/light_theme"
		/>

        <CheckBox
            android:id="@+id/auto_lock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/auto_lock"
		/>

        <CheckBox
            android:id="@+id/auto_pan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/auto_pan"
		/>

        <CheckBox
            android:id="@+id/haptic_feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="@string/haptic_feedback"
		/>

    </LinearLayout>

</ScrollView>
